app/portfolio/features/_projectInsights.scss
@use '/app/base/sass/functions' as f;
@use '/app/portfolio/scss/portfolioStyles' as s;

.projectDetails {
  @media (width <= 1480px) {
    height: max-content;
  }
}

.projectDetails__header {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 8rem;
  & h2 {
    display: none;
  }
  @media (width <= 1480px) {
    position: relative;
    height: auto;
  }
  &__nav {
    display: flex;
    align-items: center;
    width: inherit;
    height: inherit;
    padding: 0 s.$box-model-viewport-x;
    pointer-events: none;
    &__left,
    &__right {
      position: relative;
      flex: 0 0 50%;
      gap: s.$portfolio-gap;
      z-index: 2;
      & button {
        pointer-events: all;
        & span {
          display: flex;
          align-items: center;
          text-transform: none;
        }
      }
    }
    &__left {
      @media (width <= 1480px) {
        display: none;
      }
    }
    &__right {
      display: flex;
      justify-content: flex-end;
      @media (width <= 1480px) {
        display: none;
      }
    }
  }
}

.projectDetails__insights {
  display: flex;
  gap: calc(s.$portfolio-gap * 4);
  height: 100%;
  padding: 16rem s.$box-model-viewport-x 8rem s.$box-model-viewport-x;
  overflow-y: scroll;
  @media (width > 1480px) {
    &::-webkit-scrollbar {
      width: 14px;
      height: 14px;
    }
    &::-webkit-scrollbar-track {
      background: #141414;
    }
    &::-webkit-scrollbar-thumb {
      background: #f3f3f1;
    }
  }
  @media (width <= 1480px) {
    flex-direction: column;
    align-items: center;
    gap: s.$portfolio-gap;
    padding: calc(s.$box-model-viewport-x / 2) s.$box-model-viewport-x s.$box-model-viewport-x s.$box-model-viewport-x;
  }
  @media (width <= 460px) {
    padding: calc(s.$box-model-viewport-x / 2) s.$box-model-viewport-x calc(s.$box-model-viewport-x * 2) s.$box-model-viewport-x;
  }
  & > * {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: max-content;
  }
  &__technology {
    position: relative;
    width: 100%;
    flex: 0 1 45%;
    @media (width <= 1480px) {
      order: 2;
      align-items: flex-start;
    }
    &__container {
      position: sticky;
      top: 10%;
      left: 0;
      & h2 {
        font-size: clamp(f.rem(24), f.rem(30) + 1vw, f.rem(36));
        padding-bottom: calc(s.$portfolio-gap * 2);
        @media (width <= 460px) {
          text-align: center;
          line-height: 200%;
        }
      }
      &__tech {
        display: flex;
        align-items: center;
        gap: f.rem(100);
        border-bottom: 1px solid hsl(240, 4%, 16%);
        @media (width <= 460px) {
          flex-direction: column;
          gap: 0;
        }
        &--key {
          flex: 0 0 30%;
          padding: s.$portfolio-gap 0;
          font-size: clamp(f.rem(16), f.rem(12) + 1vw, f.rem(18));
          text-transform: capitalize;
          white-space: nowrap;
          @media (width <= 460px) {
            padding: s.$portfolio-gap 0 0 0;
          }
        }
        &__values {
          display: flex;
          justify-content: flex-end;
          flex: 0 1 70%;
          flex-wrap: wrap;
          gap: calc(s.$portfolio-gap / 2);
          padding: s.$portfolio-gap 0;
          text-transform: uppercase;
          @media (width <= 460px) {
            justify-content: center;
          }
          & li abbr {
            font-size: clamp(f.rem(16), f.rem(12) + 1vw, f.rem(18));
          }
        }
      }
    }
  }
  &__project {
    flex: 1 0 55%;
    height: max-content;
    @media (width <= 1480px) {
      order: 1;
      display: flex;
      justify-content: center;
    }
    &__article {
      display: flex;
      flex-direction: column;
      gap: calc(s.$portfolio-gap / 2);
      padding-bottom: calc(s.$box-model-viewport-x - s.$portfolio-gap);
      user-select: text;
      cursor: text;
      text-align: start;
      & h2 {
        width: clamp(27ch, 100%, 40ch);
        padding-bottom: calc(s.$portfolio-gap * 2);
        font-size: clamp(f.rem(24), f.rem(30) + 1vw, f.rem(36));
        @media (width <= 620px) {
          width: auto;
          font-size: clamp(f.rem(20), f.rem(22) + 1vw, f.rem(28));
        }
      }
      & p {
        width: clamp(20ch, 100%, 75ch);
        word-wrap: break-word;
        white-space: normal;
      }
    }
  }
}

